nashorn/test/script/basic/JDK-8019791.js.EXPECTED
SyntaxError: test/script/basic/JDK-8019791.js#33<eval>:1:3 Expected ; but found ~
"" ~ ""
   ^
SyntaxError: test/script/basic/JDK-8019791.js#41<eval>:1:18 Expected ) but found ~
function() { if (1~0) return 0; return 1 }
                  ^
